--- a/py/CMakeLists.txt
+++ b/py/CMakeLists.txt
@@ -45,6 +45,11 @@ SET_TARGET_PROPERTIES(_testCppPy PROPERTIES PREFIX "")
 TARGET_LINK_LIBRARIES(_testCppPy yade)
 INSTALL(TARGETS _testCppPy DESTINATION "${YADE_PY_PATH}/yade/")
 
+ADD_LIBRARY(_math SHARED "${CMAKE_CURRENT_SOURCE_DIR}/high-precision/_math.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/high-precision/_ExposeStorageOrdering.cpp")
+SET_TARGET_PROPERTIES(_math PROPERTIES PREFIX "")
+TARGET_LINK_LIBRARIES(_math yade)
+INSTALL(TARGETS _math DESTINATION "${YADE_PY_PATH}/yade/")
+
 ADD_LIBRARY(WeightedAverage2d SHARED "${CMAKE_CURRENT_SOURCE_DIR}/WeightedAverage2d.cpp")
 SET_TARGET_PROPERTIES(WeightedAverage2d PROPERTIES PREFIX "")
 INSTALL(TARGETS WeightedAverage2d DESTINATION "${YADE_PY_PATH}/yade/")
