--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -267,7 +267,7 @@ makeHP_mpfr100:
     - echo $EXTRA_CMAKE_ARGS
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
 
-makeHP_boost100:
+makeHP_bf100:
   <<: *make_definition
   <<: *artifacts_definition
   before_script:
@@ -437,13 +437,13 @@ testHP_mpfr100:
   needs: ["makeHP_mpfr100"]
   timeout: 4 hours
 
-testHP_boost100:
+testHP_bf100:
   <<: *test_definition
 ##<<: *skip_wip_test_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
   dependencies:
-    - makeHP_boost100
-  needs: ["makeHP_boost100"]
+    - makeHP_bf100
+  needs: ["makeHP_bf100"]
   timeout: 4 hours
 
 
@@ -573,13 +573,13 @@ checkHP_mpfr100:
   needs: ["makeHP_mpfr100"]
   timeout: 4 hours
 
-checkHP_boost100:
+checkHP_bf100:
   <<: *check_definition
 ##<<: *skip_wip_test_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-NEW-minieigen
   dependencies:
-    - makeHP_boost100
-  needs: ["makeHP_boost100"]
+    - makeHP_bf100
+  needs: ["makeHP_bf100"]
   timeout: 4 hours
 
 
