--- a/py/__init__.py.in
+++ b/py/__init__.py.in
@@ -85,7 +85,7 @@ globals().update(deprecatedTypes)
 # declare what should be imported for "from yade import *"
 __all__=list(deprecatedTypes.keys())+['O']
 
-from minieigen import *
+from yade.minieigenHP import *
 
 from yade.wrapper import *
 # import to separate namespace to be able to call dir(miniEigen) and dir(wrapper) below
